--- a/packages/client/src/app.css
+++ b/packages/client/src/app.css
@@ -1,16 +1,21 @@
 @import '@fontsource/fira-mono';
 
 :root {
-	font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	--font-mono: 'Fira Mono', monospace;
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 	--pure-white: #ffffff;
 	--primary-color: #b9c6d2;
 	--secondary-color: #d0dde9;
 	--tertiary-color: #edf0f8;
-	--accent-color: #ff3e00;
-	--heading-color: rgba(0, 0, 0, 0.7);
+	--branding-color: #E08700;
+	--branding-light: #FFCE85;
+	--action-color: #379634;
+	--action-hover: #42B63E; 
 	--text-color: #444444;
+	--nav-height: 3em;
+	--accent-color: #FF9900;
+	--heading-color: rgba(0, 0, 0, 0.7);
+
+
 	--background-without-opacity: rgba(255, 255, 255, 0.7);
 	--column-width: 42rem;
 	--column-margin-top: 4rem;
@@ -19,16 +24,16 @@
 body {
 	min-height: 100vh;
 	margin: 0;
-	background-color: var(--primary-color);
+	/* background-color: var(--primary-color);
 	background: linear-gradient(
 		180deg,
 		var(--primary-color) 0%,
 		var(--secondary-color) 10.45%,
 		var(--tertiary-color) 41.35%
-	);
+	); */
 }
 
-body::before {
+/* body::before {
 	content: '';
 	width: 80vw;
 	height: 100vh;
@@ -42,23 +47,20 @@ body::before {
 		rgba(255, 255, 255, 0) 100%
 	);
 	opacity: 0.05;
-}
+} */
 
-#svelte {
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-}
-
-h1,
-h2,
-p {
+h1, h2, h3, h4, h5, h6 {
 	font-weight: 400;
 	color: var(--heading-color);
+	margin: 0;
 }
 
 p {
 	line-height: 1.5;
+}
+
+p, label, div {
+	color: var(--text-color);
 }
 
 a {
@@ -66,17 +68,12 @@ a {
 	text-decoration: none;
 }
 
-a:hover {
-	text-decoration: underline;
-}
-
 h1 {
 	font-size: 2rem;
-	text-align: center;
 }
 
 h2 {
-	font-size: 1rem;
+	font-size: 1.5rem;
 }
 
 pre {
